[tool.poetry]
name = "vns-makeev"
version = "0.1.0"
description = ""
authors = ["dersar <vanya20061482@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
